[metadata]
name = pyrvc
version = 2023.04.24
description = Converts voice by RVC model
long_description = file: README.MD
long_description_content_type = text/markdown
license = Apache-2.0
author = ywx9.com
author_email = yw.ninefold@gmail.com
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    pydub >= 0.25.1
    fairseq == 0.12.2
    pyworld == 0.3.2
    pyaudio == 0.2.13
    praat-parselmouth == 0.4.3
